add_library (Engine
    Core/Application.cpp
    Core/Concurrency/Job.cpp
    Core/Concurrency/JobQueue.cpp
    Core/Memory/disable_raw_mem_ops.cpp
    Core/Memory/DoubleEndedLinearAllocator.cpp
    Core/Memory/LinearAllocator.cpp
    Core/Memory/SmallObjectPool.cpp
    Core/String.cpp
    Crypto/Base64.cpp
    Crypto/Hex.cpp
    Crypto/HMAC.cpp
    Crypto/MD5.cpp
    Crypto/RC4.cpp
    Geom/Rect.cpp
    GFX/Animation/AnimationState.cpp
    GFX/Render.cpp
    GFX/SceneGraph.cpp
    GFX/Sprite.cpp
    GFX/Texture.cpp
    GFX/Window.cpp
    Input/Input.cpp
    IO/Compressed.cpp
    IO/Encrypted.cpp
    IO/FileUtils.cpp
    IO/Loaders/Jpeg.cpp
    IO/Loaders/LoadAnimation.cpp
    IO/Loaders/LoadAtlas.cpp
    IO/Loaders/LoadFont.cpp
    IO/Loaders/LoadSound.cpp
    IO/Loaders/Png.cpp
    IO/ResourcePack.cpp
    IO/Stream.cpp
    Util/hash.cpp
    )
